# NL2Pinecone_Query_Agent

./: .env  .env.example  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  app.py  batch_query_test-results.json  batch_query_test_results.json  batch_results_test-results.json  delete_records.py  fill_pinecone_db.py  final_test_run_commandline.txt  nl2pinecone_agent.py  populate_pinecone_db.py  populate_pinecone_db_with_csv.py  project_req.txt  pyproject.toml  test_batch-queries.py  test_batch-results.py  test_batch.py  test_samples-queries.json  test_samples-results.json  test_samples.py
